--- a/style.css
+++ b/style.css
@@ -1,5 +1,118 @@
+:root {
+  --ocean: rgb(12, 51, 80);
+  --aquaaa: rgb(102, 253, 246);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0
+  padding: 0;
+  font-family: 'Sen', sans-serif;
+}
+
+/* mobile first */
+@media (min-width: 415px) {
+  /* Content Placement */
+  body {
+    background: var(--ocean);
+    color: var(--aquaaa);
+    max-width: 415px;
+    margin: auto;
+    height: 100vh;
+    height: 100dvh;
+  }
+  
+  #content-container {
+    position: relative;
+    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+  }
+  
+  header {
+    padding: 1rem;
+  }
+  
+  main {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 1rem;
+    margin-top: 10%;
+  }
+  
+  main h1 {
+    font-size: 3.5em;
+    font-weight: 600;
+  }
+  
+  main p {
+    font-size: 1.5em;
+    color: white;
+    line-height: 1.4;
+    display: block;
+  }
+  
+  main a {
+    background: var(--aquaaa);
+    color: var(--ocean);
+    border-radius: .2em;
+    padding: 22px 20px;
+    text-decoration: none;
+    font-size: 1.5em;
+    font-weight: 900;
+    width: max-content;
+  }
+
+  footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+  }
+
+  footer span {
+    color: #fff;
+    font-family:Arial, Helvetica, sans-serif;
+    padding-left: 1rem;
+    font-size: 1.4em;
+  }
+
+  /* Image Placement */
+  #img-container {
+    position: absolute;
+    /* width: 100%; */
+    /* height: 100%; */
+    border: 1px solid green;
+  } 
+
+  #img-1, #img-4, #img-5 {
+    display: none;
+  }
+
+  #img-2, #img-3, #img-6 {
+    position: absolute;
+    border: 1px solid white;
+  }
+
+  #img-2 {
+    
+  }
+
+  #img-3 {
+
+  }
+
+  #img-6 {
+
+  }
+}
+
+@media (min-width: 800px) {
+  .content-container {
+    max-width: 727px;
+    background: white;
+  }
 }
