--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 @media (min-width: 415px) {
   /* Content Placement */
   body {
-    background: var(--ocean);
     color: var(--aquaaa);
     max-width: 415px;
     margin: auto;
@@ -24,21 +23,22 @@
   
   #content-container {
     position: relative;
-    border: 1px solid red;
     width: 100%;
     height: 100%;
+    background: var(--ocean);
+    z-index: -2;
   }
   
   header {
-    padding: 1rem;
+    padding: 1.2rem;
   }
   
   main {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    padding: 1rem;
-    margin-top: 10%;
+    padding: 1.2rem;
+    margin-top: 20%;
   }
   
   main h1 {
@@ -68,7 +68,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding: 1rem;
+    padding: 1.2rem;
     display: flex;
     align-items: center;
   }
@@ -83,9 +83,9 @@
   /* Image Placement */
   #img-container {
     position: absolute;
-    /* width: 100%; */
-    /* height: 100%; */
-    border: 1px solid green;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
   } 
 
   #img-1, #img-4, #img-5 {
@@ -94,19 +94,24 @@
 
   #img-2, #img-3, #img-6 {
     position: absolute;
-    border: 1px solid white;
   }
 
   #img-2 {
-    
+    width: 160px;
+    top: 60px;
+    right: 10px;
   }
 
   #img-3 {
-
+    width: 100px;
+    top: 80px;
+    left: 55px;
   }
 
   #img-6 {
-
+    width: 180px;
+    right: 10px;
+    bottom: 130px;
   }
 }
 
