--- a/style.css
+++ b/style.css
@@ -49,14 +49,13 @@ p, h1, h2, h3, h4, h5, h6 {
   
 }
 
-@media only screen and (min-width: 320px) and (max-width: 479px) {
+@media only screen and (min-width: 320px) and (max-width: 489px) {
   /* Content Placement */
   body {
     font-family: 'Sen', sans-serif;
     background: var(--ocean);
     color: var(--aquaaa);
     min-width: 320px;
-    max-width: 360px;
     min-height: 640px;
     height: 100vh;
     height: 100dvh;
@@ -163,19 +162,19 @@ p, h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/* tablet sizes - 480 x 680 */
-/* tablet sizes - 480 x 680 */
-/* tablet sizes - 480 x 680 */
-/* tablet sizes - 480 x 680 */
+/* tablet sizes - 490 x 767 */
+/* tablet sizes - 490 x 767 */
+/* tablet sizes - 490 x 767 */
+/* tablet sizes - 490 x 767 */
 
-@media only screen and (min-width: 480px) and (max-width: 767px) {
+@media only screen and (min-width: 490px) and (max-width: 767px) {
   /* Content Placement */
   body {
     font-family: 'Sen', sans-serif;
     background: var(--ocean);
     color: var(--aquaaa);
     min-width: 480px;
-    max-width: 680px;
+    max-width: 700px;
     min-height: 640px;
     height: 100vh;
     height: 100dvh;
@@ -202,8 +201,14 @@ p, h1, h2, h3, h4, h5, h6 {
   }
   
   main h1 {
-    font-size: 5.6rem;
+    font-size: 4rem;
     font-weight: 600;
+  }
+
+  @media only screen and (min-width: 612px) {
+    main h1 {
+      font-size: 5.2rem;
+    }
   }
   
   #extra {
